test: 이중 연결 리스트 테스트 추가